1. In the library interface, if the item title is too long, it will be wrapped. 2. Adjust the css code of upload and stage size in the upload mode interface to fix the problem that this component overlaps with other content when the interface width is too small. 3. Fixed the issue that when the interface is zoomed out to a certain extent in the last mode, a scroll bar appears in the programming area below. 4. When the menu bar is too long, hide the text content and only display the icon.

--- a/src/components/hardware-header/hardware-header.css
+++ b/src/components/hardware-header/hardware-header.css
@@ -4,7 +4,7 @@
 
 .hardware-header-wrapper {
     position: absolute;
-    top: $menu-bar-height;
+    top: 0;
     right: $space;
     justify-content: space-between;
 
@@ -17,18 +17,6 @@
     padding-bottom: $space;
     font-size: 0.75rem;
     user-select: none;
-}
-
-.hardware-header-wrapper-stage-large {
-    width: 482px;
-}
-
-.hardware-header-wrapper-stage-small {
-    width: 242px;
-}
-
-.hardware-header-wrapper-stage-hide {
-    width: 242px;
 }
 
 .upload-group{
